--- a/engine/pre-alpha/06/index.html
+++ b/engine/pre-alpha/06/index.html
@@ -202,6 +202,7 @@
 		//	Systems helpers.
 
 			function systemValidator(components){
+				if ( !components.length ) return false;
 				while( components.length ){
 					if ( components.shift() == undefined ) return false;
 				}
